
	Gerd78:
		* Added autostart-xas to rpm .spec files.
		* Patch for autoconf >= 2.60.

	GonoszTopi:
		* Fixed linkage with wxMSW.
		* Got rid of a few more warnings.
		* Fixed #929: configure: BUILD_CC uses CCs CFLAGS
		* Implemented #962: don't display (0) when not downloading from source
		* Fixed #954 - added ability turn IPFilter on/off for servers/clients
		  independently.

	ken:
		* Fixed control-clicking (right-clicking) on tabs in notebooks on the
		  Mac.

	nvinay:

		* Trivial issue with memset found using google codesearch which may
		affect only the debugging.

	Phoenix:
		* Upgraded extern/listctrl.{cpp,h} from wxWidgets cvs code.
		* Fixed some gtk2 warnings in extern/listctrl.cpp.
		* Fix for unhandled exception in new skinned toolbar code.
		* Coding style fixes.
		* Fix for server disconnection during global search.
		* No more wxARRAY's in amuleweb.
		* Fixed bug in mutex code in amuleweb (s_mutex_wcThreads).
		* No more wxARRAY's in aMule code.
		* Fixed bug in ECPacket.cpp: assignment inside assertion.
		* Changed CECSocket constructor to be exception safe.
		* Fix for invalid rectangle size on COScopeCtrl::PlotHistory().
		* Removed the default constructor for Kademlia contacts.
		* Fix for "get bwlimits" command in amulecmd always returning
		  zero for maximum download value.
		* Added UPnP support.
		* Fix for crash in ECSocket.cpp.
		* FileDetailDialog:: now has more intuitive Apply, Ok, Cancel
		  interface.
		* GUI to enter a specific bind IP in
		  "Preferences->Connection->BindAddress".
		* Resurrected support for the tag FT_DL_ACTIVE_TIME in the met
		  file. It's value, the download active time, can now be seen
		  in the file details dialog.
		* Added the DLACTIVETIME variable to the list of replaced
		  variables in the DowloadCompleted user event.
		* MuleTrayIcon.cpp was not compiling for __WXMAC_CARBON__.
		  Seems to be fixed, but must be the code now has a lot of
		  ifdefs and must be tested on other platforms.
